--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.0.0-rc.0",
     "@material-ui/styles": "^4.0.0-rc.0",
+    "aws-api-gateway-client": "^0.2.17",
     "connected-react-router": "4.5.0",
+    "mathjs": "^6.0.4",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "5.1.1",
